--- a/src/components/Options/Options.module.css
+++ b/src/components/Options/Options.module.css
@@ -4,10 +4,12 @@
 }
 
 .feedbackButton {
-    padding: 0;
-    border-radius: 50%;
-    border: none;
-    background-color: transparent;
+    width: 80px;
+    padding: 4px;
+    border-radius: 4px;
+    border: 2px solid darkgray;
+    background-color: lightgray;
+    font-size: 16px;
 }
 
 .feedbackContainer {
@@ -17,8 +19,23 @@
 }
 
 .smileButtons {
+    margin-bottom: 16px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 16px;
+}
+
+.resetButton {
+    width: 80px;
+    padding: 4px;
+    border-radius: 4px;
+    border: 1px solid black;
+    background-color: dimgray;
+    font-size: 16px;
+    color:aliceblue;
+}
+
+.resetSection {
+    justify-content: center;
 }
